added media queries @870 for all 3 pages

--- a/blog.html
+++ b/blog.html
@@ -24,8 +24,11 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
-            <img src="./assets/blog-image-1.jpg" alt="Cherry tree">
-            <h1>BLOG</h1>
+            <div class="image">
+                <img src="./assets/blog-image-1.jpg" alt="Cherry tree">
+                <h1>BLOG</h1>
+            </div>
+            
         </div>
     </header>
     <div class="blogPost">
