--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,11 @@
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
             </nav>
-            <img src="./assets/contact-image-1.jpg" alt="Water">
-            <h1>CONTACT ME</h1>
+            <div class="image">
+                <img src="./assets/contact-image-1.jpg" alt="Water">
+                <h1>CONTACT ME</h1>
+            </div>
+            
         </div>
     </header>
     <section class="contactInfo">
