--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,11 @@
         <div class="wrapper">
             <nav class="navigation">
                 <ul>
-                    <li><a href="#home">HOME</a></li>
+                    <li><a href="/index.html">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
-                    <li><a class="test" href="#harper">HARPER</a></li>
-                    <li><a href="#blog">BLOG</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="/index.html">HARPER</a></li>
+                    <li><a href="/blog.html">BLOG</a></li>
+                    <li><a href="/contact.html">CONTACT</a></li>
                 </ul>
             </nav>
             <div class="image">
