added hamburger menu main page first draft

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="main">
         <div class="wrapper">
-            <div>
+            <!-- <div>
                 <ul>
                     <li><a href="./index.html">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
@@ -23,7 +23,26 @@
                     <li><a href="./blog.html">BLOG</a></li>
                     <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
-            </div>
+            </div> -->
+            <!-- Navbar + Hamburger Menu -->
+            <nav class="navbar">
+                <a href="#" class="toggle-button">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a> 
+                <div class="navbar-links">
+                    <ul>
+                        <li><a href="./index.html">HOME</a></li>
+                        <li><a href="#about">ABOUT</a></li>
+                        <!-- <li><a href="#">HARPER</a></li> -->
+                        <li><a href="./blog.html">BLOG</a></li>
+                        <li><a href="./contact.html">CONTACT</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+
             <h2 class="everyDay">EVERYDAY LIFE WITH</h2>
             <h1>HARPER</h1>
             <img class="img1" src="./assets/home-image-1.jpg" alt="Girl with baloons">
@@ -188,5 +207,6 @@
     </footer>
 
     <script src="carousel.js"></script>
+    <script src="menu.js"></script>
 </body>
 </html>
